--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "figlet": "^1.5.0",
     "react": "^17.0.2",
     "react-blessed": "^0.7.2",
+    "stop-runaway-react-effects": "^2.0.0",
+    "use-deep-compare-effect": "^1.6.1",
     "weather-js": "^2.0.0"
   }
 }
