--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@babel/register": "^7.14.5",
     "@use-it/interval": "^1.0.0",
     "blessed": "^0.1.81",
+    "chalk": "^2.4.2",
     "eslint": "^7.31.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "figlet": "^1.5.0",
+    "gradient-string": "^1.2.0",
     "react": "^17.0.2",
     "react-blessed": "^0.7.2",
     "stop-runaway-react-effects": "^2.0.0",
